src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--primary-color: #7f39fb;
	--primary-hover-color: #985eff;
	--primary-accent-color: #dbb2ff;
	--dark-gray-100: #35393f;
	--dark-gray-200: #2b2d31;
	--dark-gray-300: #1d1f22;
	--dark-gray-500: #151619;
	--light-gray: #f5f5f5;
	--light-gray-100: #5a6069;
	--text-gray-100: #c1c4cb;
	--text-gray-200: #7c8187;
	--white: #ffff;
	--modal-backdrop-light: #00000083;
	--modal-backdrop-dark: #ffffff80;
}

body {
	background: var(--dark-gray-500);
	font-family: 'IBM Plex Sans', sans-serif;
	font-size: 0.875rem;
	font-size: clamp(
		0.875rem,
		0.8533333333333333rem + 0.10666666666666667vw,
		1rem
	);
}

main {
	height: calc(100vh - 55px);

	@media screen and (min-width: 998px) {
		height: calc(100vh - 70px);
	}
}

path {
	transition: stroke 0.3s;
}

.Toastify__close-button {
	svg {
		fill: var(--text-gray-200);
	}
}

.nav {
	width: auto;
	max-width: calc(100vw - 135px);

	@media screen and (min-width: 768px) {
		max-width: calc(100vw - 265px);
	}

	@media screen and (min-width: 992px) {
		max-width: calc(100vw - 300px);
	}
}

.nav::-webkit-scrollbar,
.nav-link::-webkit-scrollbar {
	display: none;
}

.icon-active,
.icon-btn:hover .icon,
.icon-btn:focus .icon,
.document-link:hover .link-icon,
.document-link:focus .link-icon {
	stroke: var(--primary-color);
}

.icon-btn:hover .tooltip,
.icon-btn:focus .tooltip {
	opacity: 1;
}

.aside-links {
	max-height: 60vh;

	@media screen and (orientation: landscape) {
		max-height: 30vh;
	}

	@media screen and (min-width: 1024px) and (orientation: landscape) {
		max-height: 60vh;
	}
}

.link-element {
	display: flex;
	align-items: center;
	width: 100%;
	padding: 0.5rem;
}

.link-element h3 {
	font-size: 14px;
	line-height: 20px;
	color: var(--text-gray-200);
}

.link-element p {
	transition: color 0.3s;
}

.aside-link:hover p,
.aside-link:focus p {
	color: var(--primary-color);
}

.react-resizable-handle {
	position: absolute;
	right: 0;
	top: 0;
	display: block;
	width: 5px;
	height: 100%;
	background: transparent;
	border-right: 1px solid var(--text-gray-200);
	cursor: col-resize;
	transition: background-color 0.3s, border-color 0.3s;
	transition-delay: 0.3s;
}

.only-editor .react-resizable-handle {
	display: none;
}

.react-resizable-handle:hover {
	background-color: var(--primary-color);
	border-color: var(--primary-color);
}

.react-resizable-handle:active {
	background-color: var(--primary-hover-color);
	border-color: var(--primary-hover-color);
}

.preview h1,
.preview h2,
.preview h3,
.preview h4,
.preview h5,
.preview h6 {
	margin-block-end: 0.5em;
	font-weight: bold;
	color: var(--dark-gray-300);
}

.preview h1 {
	font-size: 2.125rem;
	font-size: clamp(
		2.125rem,
		2.013888888888889rem + 0.5555555555555556vw,
		2.5rem
	);
	line-height: 1;
}

.preview h2 {
	font-size: 2rem;
	font-size: clamp(
		2rem,
		1.8888888888888888rem + 0.5555555555555556vw,
		2.375rem
	);
	line-height: 1.067;
}

.preview h3 {
	font-size: 1.625rem;
	font-size: clamp(
		1.625rem,
		1.5138888888888888rem + 0.5555555555555556vw,
		2rem
	);
	line-height: 1.083;
}

.preview h4 {
	font-size: 1.375rem;
	font-size: clamp(
		1.375rem,
		1.2638888888888888rem + 0.5555555555555556vw,
		1.75rem
	);
	line-height: 1.1;
}

.preview h5,
.preview dt {
	font-size: 1.25rem;
	font-size: clamp(
		1.25rem,
		1.175925925925926rem + 0.3703703703703704vw,
		1.5rem
	);
	line-height: 1.111;
}

.preview h6 {
	font-size: 1.125rem;
	font-size: clamp(
		1.125rem,
		1.087962962962963rem + 0.1851851851851852vw,
		1.25rem
	);
	line-height: 1.125;
}

.preview p,
.preview ul,
.preview ol,
.preview blockquote,
.preview pre {
	margin-block-end: 0.8em;
}

.preview blockquote p {
	margin-block-end: 0;
}

.preview p {
	font-size: 0.875rem;
	font-size: clamp(0.875rem, 0.837962962962963rem + 0.1851851851851852vw, 1rem);
}

.preview a {
	outline: none;
	color: var(--primary-color);
	text-decoration: underline;
	transition: color 0.3s;
}

.preview a:hover,
.preview a:focus {
	color: var(--primary-hover-color);
}

.preview ol {
	list-style-type: decimal;
}

.preview ul {
	list-style-type: disc;
}

.preview ul li::marker,
.preview ol li::marker {
	color: var(--primary-color);
}

.preview ol,
.preview ul {
	padding: 0 0 0 2rem;
	line-height: 2;
}

.preview hr {
	border-color: var(--primary-color);
}

.preview pre,
.preview blockquote {
	position: relative;
	padding: 1rem 2rem;
	border-radius: 0.5rem;
	overflow: hidden;
	z-index: 0;
}

.preview pre,
.preview code,
.preview blockquote {
	background-color: var(--light-gray);
	color: var(--dark-gray-500);
}

.preview pre::before,
.preview blockquote::before {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 5px;
	background: var(--primary-color);
	content: '';
}

.preview img {
	max-width: 100%;
}

.preview table {
	width: 100%;
}

.preview thead {
	background-color: var(--primary-color);
	border: 1px solid var(--primary-color);
	color: var(--white);
}

.preview tbody,
td {
	border: 1px solid var(--text-gray-200);
	text-align: center;
}

.preview th,
td {
	padding: 0.5em;
}

.preview dt {
	font-weight: bold;
}

.preview dd {
	padding: 0 0 0 1em;
}

.preview del {
	font-style: italic;
}

.preview input[type='checkbox'] {
	margin-right: 0.5em;
}

.dark .preview h1,
.dark .preview h2,
.dark .preview h3,
.dark .preview h4,
.dark .preview h5,
.dark .preview h6 {
	color: var(--white);
}

.dark .preview pre,
.dark .preview code,
.dark .preview blockquote {
	background: var(--dark-gray-300);
	color: var(--white);
}

::-webkit-scrollbar {
	width: 5px;
}

::-webkit-scrollbar-track {
	background: transparent;
}

::-webkit-scrollbar-thumb {
	background: var(--primary-color);
}

::-moz-selection {
	background: var(--primary-accent-color);
}

::selection {
	background: #8039fba8;
}

.title-label {
	transition: color 0.3s, background-color 0.3s, transform 0.3s, opacity 0.3s;
}

.title-input:focus ~ .title-label,
.title-input:valid ~ .title-label {
	color: var(--white);
	background-color: var(--primary-color);
	transform: translate(0.2rem, -1.25rem) scale(0.8);
}

